# ScalePieGraph

./: .gitignore  CMakeLists.txt  Doxyfile  PROPOSAL.md  README.md
apps/: cinder_app_main.cc  main.cc
include/core/: scale.h  scale_dataset.h  synthesizer.h
include/frontend/: canvas.h  keyboard.h  pie_graph.h  scale_pie_graph_app.h
include/frontend/controls/: knob.h
scale-pie-graph/: CMakeLists.txt
scale-pie-graph/include/core/: scale.h  synthesizer.h
scale-pie-graph/src/core/: scale.cc  synthesizer.cc
src/core/: scale.cc  scale_dataset.cc  synthesizer.cc
src/frontend/: canvas.cc  keyboard.cc  pie_graph.cc  scale_pie_graph_app.cc
src/frontend/controls/: knob.cc
tests/: test_keyboard.cc  test_pie_graph.cc  test_scale.cc  test_scale_dataset.cc
